<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top">

    <ImageView
        android:id="@+id/pictureFugitive"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@android:drawable/ic_menu_gallery"
        android:contentDescription="@null"/>

    <TextView
        android:id="@+id/labelMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/message_detail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_foto"
        android:onClick="OnFotoClick"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <Button
        android:id="@+id/buttonCapturar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="30dp"
        android:minWidth="100dp"
        android:onClick="OnCaptureClick"
        android:text="@string/boton_capturar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/buttonEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:minWidth="100dp"
        android:onClick="OnDeleteClick"
        android:text="@string/boton_eliminar"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/buttonMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_mapa"
        android:onClick="OnMapClick"
        android:minHeight="30dp"
        android:minWidth="100dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


</LinearLayout>